--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "~53.0.9",
-    "expo-auth-session": "~6.1.5",
+    "expo": "~53.0.23",
+    "expo-auth-session": "~6.2.1",
     "expo-image-picker": "~16.1.4",
-    "expo-location": "^18.1.5",
-    "expo-navigation-bar": "~4.2.4",
+    "expo-location": "~18.1.6",
+    "expo-navigation-bar": "~4.2.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-icons": "^5.5.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
