--- a/package.json
+++ b/package.json
@@ -9,32 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-community/slider": "4.5.6",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "axios": "^1.9.0",
-    "expo": "~53.0.23",
-    "expo-auth-session": "~6.2.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-location": "~18.1.6",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
+    "expo": "54.0.22",
+    "expo-auth-session": "~7.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-location": "~19.0.7",
+    "expo-navigation-bar": "~5.0.9",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
+    "react": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-qrcode-svg": "^6.3.20",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
