--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/native": "^7.1.9",
@@ -18,9 +19,11 @@
     "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-image-picker": "~17.0.8",
+    "expo-local-authentication": "~17.0.7",
     "expo-location": "~19.0.7",
     "expo-navigation-bar": "~5.0.9",
     "expo-print": "~15.0.7",
+    "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
